---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_folding_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_folding/multiply_by_zero.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"SymbolId(0)"}
int_prop = (
        foo(
                int_prop # {"SymbolId(0)"}
                ,) # {"FunctionId(1)"}
         then 0);

# {"FunctionId(1)"}
fn foo(int,) -> (int,) {
    # {"SymbolId(0)"}
    int_prop = 
            x # {"SymbolId(3)"}
            ;
    wait;
    return (
            x # {"SymbolId(3)"}
            ,);
}
